# plex-footage-sorter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: coverage.yml  deploy.yml  python-publish.yml  python_tests.yml
src/: __init__.py
src/phone_footage_sorter/: entry.py
src/plex_footage_sorter/: _rename.py  _sort_dated_footage_as_date_series.py  _sort_movpilot_series.py  entry.py
tests/: conftest.py  test_integration.py  test_integration_entry.py  test_integration_rename.py  test_integration_sort_dated_footage.py  test_integration_sort_movpilot_series.py  test_system.py  test_unit.py  test_unit_entry.py  test_unit_sort_dated_footage.py
