[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="phone_footage_sorter"
authors=[
    {name = "Benjamin Mummery", email="benjamin.mummery@zapatacomputing.com"}
]
license = {file = "LICENSE"}
description = "A simple script to process android phone footage default names into plex-friendly filenames."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = []

[project.scripts]
phone-footag-sorter = "src.phone_footage_sorter:main"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

[tool.setuptools.packages]
find = {}

[tool.distutils.bdist_wheel]
universal = true

[tool.mypy]
exclude = "tests/"
warn_unused_configs = true
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = "--strict-markers"

[tool.interrogate]
ignore-init-method = true
fail-under = 100
verbose = 2
ignore_magic = true

[tool.flake8]
ignore = ["E203", "W503"]
max-line-length = 88
style="google"
count = true
arg-type-hints-in-docstring = true